samples/_failures_safe/1761291795_cb5970_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5952b9e.c: In function ‘main’:
./samples/SAFE/__tmp_b5952b9e.c:167:5: error: expected expression at end of input
  167 |     if (
      |     ^~
./samples/SAFE/__tmp_b5952b9e.c:167:5: error: expected declaration or statement at end of input
